restrict expression length to prevent screen overflow

--- a/client/src/features/calculator/calculator.scss
+++ b/client/src/features/calculator/calculator.scss
@@ -27,6 +27,7 @@
 	font-size: 1.5rem;
 	text-align: left;
 	margin: 0.75rem 0 0.75rem 0.5rem;
+	font-style: italic;
 }
 
 #buttons {
@@ -78,6 +79,8 @@
 	position: absolute;
 	top: 0.25rem;
 	left: 0.5rem;
+
+	font-style: italic;
 }
 .calc-num-btn {
 	color: rgb(0, 77, 155);
